--- a/custom_components/cozylife/manifest.json
+++ b/custom_components/cozylife/manifest.json
@@ -4,7 +4,7 @@
   "documentation": "https://github.com/yangqian/hass-cozylife",
   "dependencies": [],
   "codeowners": ["yangqian","cozylife"],
-  "requirements": [],
+  "requirements": ["requests"],
   "iot_class": "local_polling",
   "version": "0.4.0"
 }
